--- a/main.html
+++ b/main.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -56,17 +55,21 @@
 
                   <div class="row skills-mf">
                     <p class="title-s">Skills</p>
-                    
 
                     <span>
-                      Java<i class="fab fa-java" style='font-size:30px;color:red'></i></i>&nbsp; Python<i class="fab fa-python" style='font-size:30px;color:rgb(0, 21, 255)'></i></i>&nbsp;
+                      REACT
+                      <i class="fab fa-react fs-25" style="color: aqua"></i
+                      >&nbsp; CSS
+                      <i class="fab fa-css3 fs-25" style="color: blue"></i
+                      >&nbsp; JAVASCRIPT
+                      <i class="fab fa-js fs-25" style="color: gold"></i>&nbsp;
                     </span>
-                    <span class="pull-right">97%</span>
+                    <span class="pull-right">95%</span>
                     <div class="progress">
                       <div
                         class="progress-bar"
                         role="progressbar"
-                        style="width: 97%"
+                        style="width: 95%"
                         aria-valuenow="95"
                         aria-valuemin="0"
                         aria-valuemax="100"
@@ -74,39 +77,65 @@
                       ></div>
                     </div>
                     <span>
-                        HTML <i class="fa-brands fa-html5" style="font-size: 30px; color: orange;"></i>&nbsp; CSS
-                        <i class="fab fa-css3 fs-25" style="color: blue;"></i>&nbsp; JAVASCRIPT
-                        <i class="fab fa-js fs-25" style="color: yellow;"></i>&nbsp;
-                      </span>
-                      <span class="pull-right">95%</span>
-                      <div class="progress">
-                        <div
-                          class="progress-bar"
-                          style="width: 95%"
-                          role="progressbar"
-                          aria-valuenow="95"
-                          aria-valuemin="0"
-                          aria-valuemax="100"
-                          class="w-95"
-                        ></div>
-                      </div>
-                    <span>
-                      SQL <i class="fa-solid fa-database" style="font-size: 30px; color: rgb(18, 60, 61);"></i>&nbsp; MongoDB
+                      NODEJS<i
+                        class="fa-brands fa-node-js"
+                        style="font-size: 30px; color: rgb(143, 232, 80)"
+                      ></i
+                      >&nbsp; MONGODB&nbsp;
                     </span>
-                    <span class="pull-right">98%</span>
+                    <span class="pull-right">90%</span>
                     <div class="progress">
                       <div
                         class="progress-bar"
                         role="progressbar"
-                        style="width: 98%"
+                        style="width: 90%"
                         aria-valuenow="95"
                         aria-valuemin="0"
                         aria-valuemax="100"
                         class="w-95"
                       ></div>
                     </div>
-
-                   
+                    <span>
+                      C/C++<img
+                        src="c++.png"
+                        alt="c++"
+                        style="width: 30px; height=30px"
+                      />&nbsp; PYTHON
+                      <i
+                        class="fa-brands fa-python"
+                        style="font-size: 30px; color: blue"
+                      ></i
+                      >&nbsp; BATCH &nbsp;
+                    </span>
+                    <span class="pull-right">99%</span>
+                    <div class="progress">
+                      <div
+                        class="progress-bar"
+                        style="width: 99%"
+                        role="progressbar"
+                        aria-valuenow="95"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                        class="w-95"
+                      ></div>
+                    </div>
+                    <span>
+                      AWS
+                      <i class="fa-brands fa-aws" style="font-size: 30px"></i
+                      >&nbsp; HADOOP
+                    </span>
+                    <span class="pull-right">93%</span>
+                    <div class="progress">
+                      <div
+                        class="progress-bar"
+                        role="progressbar"
+                        style="width: 93%"
+                        aria-valuenow="95"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                        class="w-95"
+                      ></div>
+                    </div>
                   </div>
                 </div>
                 <div class="col-md-6">
